feat: UI refactoring and cleanup - Remove unused files and build artifacts - Centralize route management with routeMap.ts - Implement shared theme system and reusable components - Add responsive design with container max-width - Apply labeled detail pattern to participant views - Improve layout consistency across screens

--- a/app.json
+++ b/app.json
@@ -34,6 +34,12 @@
         "projectId": "e7e39ee0-4662-4503-9240-a4f6139d79f3"
       }
     },
-    "owner": "blslawas"
+    "owner": "blslawas",
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/e7e39ee0-4662-4503-9240-a4f6139d79f3"
+    }
   }
 }
