--- a/eas.json
+++ b/eas.json
@@ -12,6 +12,9 @@
     },
     "production": {
       "distribution": "store"
+    },
+    "web": {
+      "platform": "web"
     }
   },
   "submit": {
