--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,11 @@
   "installCommand": "npm install",
   "devCommand": "expo start --web",
   "public": true,
+  "github": {
+    "silent": true
+  },
+  "functions": {},
+  "redirects": [],
   "rewrites": [
     {
       "source": "/(.*)",
@@ -16,12 +21,16 @@
       "source": "/(.*)",
       "headers": [
         {
-          "key": "X-Frame-Options",
-          "value": "DENY"
+          "key": "Cache-Control",
+          "value": "public, max-age=3600"
         },
         {
           "key": "X-Content-Type-Options",
           "value": "nosniff"
+        },
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
         }
       ]
     }
