--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "build": "expo export --platform web",
-    "vercel-build": "expo export --platform web"
+    "prebuild-icons": "node scripts/generate-icons.js",
+    "build": "npm run prebuild-icons && expo export --platform web && node scripts/postbuild-apple-icon.js",
+    "vercel-build": "npm run prebuild-icons && expo export --platform web && node scripts/postbuild-apple-icon.js"
   },
   "dependencies": {
     "@expo/metro-runtime": "~5.0.4",
@@ -43,7 +44,8 @@
     "@babel/core": "^7.20.0",
     "@types/papaparse": "^5.3.16",
     "@types/react": "~19.0.10",
-    "typescript": "~5.9.2"
+    "typescript": "~5.9.2",
+    "sharp": "^0.33.4"
   },
   "private": true
 }
