Build: enable JSX and esModuleInterop in tsconfig; compact ResultsAnalytics hero + containers

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,11 @@
     "noUncheckedIndexedAccess": false,
     "noImplicitOverride": false,
     "allowUnusedLabels": true,
-    "allowUnreachableCode": true
+    "allowUnreachableCode": true,
+    "jsx": "react-jsx",
+    "esModuleInterop": true,
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "skipLibCheck": true
   }
 }
